# test-poetry

./: README.md  pyproject.toml  shell.nix
.github/workflows/: python-app.yml
contrib/: check.sh
poetry-demo/: main.py
poetry_demo/: main.py
tests/: test_tools.py
utils/: consumer.py  producer.py  random.py  random_gen.py
web/: main.py
worker/: main.py
