[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Patrick Marie <pm@mkz.me>"]
readme = "README.md"
packages = [
    { include = "utils" },
]


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
prometheus-client = "^0.21.0"
pylint = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
